[package]
name = "rbac-macro"
version = "0.1.0"
description = "rbca-macro"
repository = "https://github.com/funcpp/rbac-rs"
edition = "2021"
authors = ["funcpp"]
keywords = ["rbac"]
license = "MIT"
include = ["src/*.rs", "Cargo.toml"]

[dependencies]
quote = "1.0.37"
syn = "2.0.79"
rbac = { path = "../rbac" }

[lib]
proc-macro = true
