[package]
name = "rbac-visualize"
version = "0.1.0"
edition = "2021"
authors = ["funcpp"]

[dependencies]
egui_graphs = { version = "0.22", features = ["egui_persistence", "events"]}
egui = {version="0.29", features = ["persistence"]}
eframe = "0.29.1"
petgraph = "0.6.5"
rbac = { path = "../rbac" }
rbac-macro = { path = "../rbac-macro" }