[package]
name = "rbac"
version = "0.1.0"
description = "rbca core lib"
repository = "https://github.com/funcpp/rbac-rs"
edition = "2021"
authors = ["funcpp"]
keywords = ["rbac"]
license = "MIT"
include = ["src/*.rs", "Cargo.toml"]

[dependencies]
indradb-lib = {version = "4.0.0", features=["rocksdb-datastore"]}
serde_json = "1.0.128"
